Polished up Home controller, and added views for all instruments

--- a/BlowOut/BlowOut.csproj
+++ b/BlowOut/BlowOut.csproj
@@ -209,6 +209,11 @@
     <Content Include="Views\Contact\Email.cshtml" />
     <Content Include="Views\Home\Rentals.cshtml" />
     <Content Include="Views\Home\Trumpet.cshtml" />
+    <Content Include="Views\Home\Trombone.cshtml" />
+    <Content Include="Views\Home\Tuba.cshtml" />
+    <Content Include="Views\Home\Flute.cshtml" />
+    <Content Include="Views\Home\Clarinet.cshtml" />
+    <Content Include="Views\Home\Saxophone.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
