--- a/BlowOut/BlowOut.csproj
+++ b/BlowOut/BlowOut.csproj
@@ -165,6 +165,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\AboutUs.jpg" />
     <Content Include="Images\AllrentalsBackground.jpg" />
     <Content Include="Images\Clarinet.jpg" />
     <Content Include="Images\Contact.jpg" />
